[package]
name = "aimdb-tokio-adapter"
version = "0.2.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tokio runtime adapter for AimDB - full-featured std async runtime support"
keywords = ["tokio", "async", "runtime", "adapter", "database"]
categories = ["asynchronous", "database-implementations"]
build = "build.rs"

[features]
default = ["std", "tokio-runtime"]

# Platform features
std = ["aimdb-core/std"]

# Runtime features
tokio-runtime = ["tokio", "std"]

# Observability features
tracing = ["aimdb-core/tracing", "dep:tracing"]
metrics = ["aimdb-core/metrics", "tokio-runtime"]

# Testing features
test-utils = ["aimdb-core/test-utils", "tokio-runtime"]

[dependencies]
# Executor traits
aimdb-executor = { version = "0.1.0", path = "../aimdb-executor", default-features = false, features = [
    "std",
    "tokio-types",
] }

# Core AimDB types - std version for Tokio (for DbError integration)
aimdb-core = { version = "0.2.0", path = "../aimdb-core", default-features = false, features = [
    "std",
] }

# Tokio async runtime
tokio = { workspace = true, optional = true, features = [
    "time",
    "rt-multi-thread",
    "sync",            # For broadcast, watch, Mutex, Notify
] }

# Observability (optional)
tracing = { workspace = true, optional = true }

[dev-dependencies]
# For async testing
tokio-test = { workspace = true }
futures = { workspace = true }
