[package]
name = "aimdb-ws-protocol"
version = "0.1.0"
edition = "2021"
license.workspace = true
description = "Shared wire protocol types for AimDB WebSocket connector and clients (no_std compatible)"
keywords = ["websocket", "protocol", "no_std", "aimdb"]

[features]
default = []
# Enable `now_ms()` helper (requires std::time)
std = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
