[package]
name = "aimdb-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example applications and demos for AimDB"
publish = false

[[example]]
name = "quickstart"
path = "quickstart.rs"

[dependencies]
# Add any dependencies your examples need here
