[package]
edition = "2024"
name = "embassy-mqtt-connector-demo"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false
description = "AimDB example demonstrating MQTT connector with Embassy runtime"

[features]
default = ["embassy-runtime"]
embassy-runtime = []
# Declare but don't enable these features to silence cfg warnings
tokio-runtime = []
std = []

[dependencies]
# AimDB dependencies
aimdb-core = { path = "../../aimdb-core", default-features = false }
aimdb-embassy-adapter = { path = "../../aimdb-embassy-adapter", default-features = false, features = [
    "embassy-runtime",
] }
aimdb-mqtt-connector = { path = "../../aimdb-mqtt-connector", default-features = false, features = [
    "embassy-runtime",
] }
# Serial remote-access server — serves this db's records over a UART (ST-LINK VCP)
# so a host can read them with `aimdb --features transport-serial --connect serial://…`.
# Its `embassy-runtime` feature also turns on `aimdb-core/remote`.
aimdb-serial-connector = { path = "../../aimdb-serial-connector", default-features = false, features = [
    "embassy-runtime",
    "defmt",
] }

# Shared demo logic. `serde` makes the shared types serde-codec'able in no_std so
# they can be exposed over the serial remote-access server.
mqtt-connector-demo-common = { path = "../mqtt-connector-demo-common", features = [
    "alloc",
    "derive",
    "serde",
] }

# Embassy ecosystem - STM32H563ZI with Ethernet
embassy-stm32 = { workspace = true, features = [
    "defmt",
    "stm32h563zi",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-executor = { workspace = true, features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { workspace = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
    "generic-queue-16",
] }
embassy-net = { workspace = true, features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { workspace = true }

# Embedded debugging and logging
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true }

# Cortex-M runtime
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
critical-section = { workspace = true }
static_cell = { workspace = true }

# Embedded HAL
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
embedded-storage = { workspace = true }

# Embedded utilities  
heapless = { workspace = true }
micromath = { workspace = true }
stm32-fmc = { workspace = true }
embedded-alloc = { version = "0.6", features = ["llff"] }

# RNG for unique client IDs
rand = { version = "0.10.1", default-features = false }

[package.metadata.embassy]
build = [
    { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/stm32h5" },
]
