[package]
name = "hello-mailbox-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AimDB minimal async example demonstrating Mailbox buffer (latest-wins) semantics"
publish = false

[dependencies]
aimdb-core = { path = "../../aimdb-core", features = ["std"] }
aimdb-tokio-adapter = { path = "../../aimdb-tokio-adapter", features = ["tokio-runtime"] }
tokio = { workspace = true, features = ["time"] }
